--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.3",
     "react-scripts": "5.0.1",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
