--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-},
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
 }
