--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-grid-carousel": "^1.0.1",
     "react-multi-carousel": "^2.8.3",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
