--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.0",
+    "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
