--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ant-design": "^1.0.0",
-    "antd": "^5.4.0",
+    "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-grid-carousel": "^1.0.1",
+    "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
