added dotenv and config file

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-SELLCOURSES_DB_URI = mongodb+srv://hau165:Minhhau165@cluster0.zdekj4w.mongodb.net/test
-SELLCOURSES_NS = BanKhoaHoc
-PORT = 8000
+CONNECTION_STRING=mongodb+srv://hau165:Minhhau165@cluster0.zdekj4w.mongodb.net/BanKhoaHoc?retryWrites=true&w=majority
+PORT=8000
+JWT_SECRET_KEY=super-secret-key
+JWT_EXPIRATION_TIME=1h
