--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
+    "moment": "^2.29.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
