--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-"type": "module",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -29,5 +29,8 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "tslib": "^2.5.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.0"
   }
 }
