--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
