--- a/backend/package.json
+++ b/backend/package.json
@@ -26,11 +26,11 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.0"
+    "@faker-js/faker": "^8.0.0",
+    "nodemon": "^2.0.22"
   }
 }
