--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-grid-carousel": "^1.0.1",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
